# proxycast

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/aiprompts/: README.md  content-creator.md  hooks.md
docs/design/: a2ui-persistence.md  settings-redesign.md
scripts/: download-models.sh
src/: App.tsx  RootRouter.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.headless.json  tauri.conf.json
src-tauri/capabilities/: deep-link.json  default.json
src-tauri/crates/agent/: Cargo.toml
src-tauri/crates/agent/src/: ask_bridge.rs  aster_state.rs  aster_state_support.rs  credential_bridge.rs  lib.rs  lsp_bridge.rs  mcp_bridge.rs
src-tauri/crates/agent/src/tools/: browser_tool.rs  mod.rs
src-tauri/crates/core/src/: event_emit.rs  lib.rs
src-tauri/crates/core/src/agent/: types.rs
src-tauri/crates/core/src/credential/: health.rs  mod.rs  pool.rs  risk.rs  types.rs
src-tauri/crates/core/src/database/: migration_v3.rs  mod.rs
src-tauri/crates/core/src/database/dao/: api_key_provider.rs
src-tauri/crates/core/src/models/: provider_type.rs
src-tauri/crates/core/src/router/: amp_router.rs  mapper.rs  mod.rs  provider_router.rs  route_registry.rs  rules.rs
src-tauri/crates/mcp/src/: manager.rs
src-tauri/crates/providers/src/providers/: openai_custom.rs
src-tauri/crates/scheduler/: Cargo.toml
src-tauri/crates/scheduler/src/: batch.rs  batch_dao.rs  dao.rs  executor.rs  lib.rs  scheduler.rs  template.rs  types.rs
src-tauri/crates/server/src/: lib.rs
src-tauri/crates/server/src/handlers/: api.rs  api_key_provider_utils.rs  batch_api.rs  batch_executor.rs  credentials_api.rs  mod.rs
src-tauri/crates/services/src/: api_key_provider_service.rs  lib.rs  provider_pool_service.rs  provider_type_mapping.rs
src-tauri/crates/skills/src/: ecommerce_review_reply.rs  lib.rs  skill_loader.rs
src-tauri/crates/voice-core/: Cargo.toml
src-tauri/crates/voice-core/src/: lib.rs
src-tauri/crates/websocket/: Cargo.toml
src-tauri/crates/websocket/src/: handler.rs  lib.rs  protocol.rs
src-tauri/crates/websocket/src/handlers/: mod.rs  rpc_handler.rs
src-tauri/resources/models/aliases/: codex.json
src-tauri/resources/models/providers/: aihubmix.json  alibaba-cn.json  amazon-bedrock.json  anthropic.json  azure-cognitive-services.json  azure.json  chutes.json  cloudflare-ai-gateway.json  codex.json  deepinfra.json  fireworks-ai.json  github-copilot.json  google-vertex-anthropic.json  huggingface.json  kimi-for-coding.json  moonshotai-cn.json  moonshotai.json  nvidia.json  ollama-cloud.json  openai.json  opencode.json  openrouter.json  poe.json  siliconflow-cn.json  siliconflow.json  synthetic.json  togetherai.json  venice.json  vercel.json  zenmux.json
src-tauri/src/: lib.rs  server.rs  server_utils.rs
src-tauri/src/agent/: aster_agent.rs  aster_state.rs  types.rs
src-tauri/src/app/: bootstrap.rs  mod.rs  runner.rs  scheduler_service.rs  setup.rs  types.rs  utils.rs
src-tauri/src/app/commands/: api_test.rs  config.rs  server.rs
src-tauri/src/commands/: a2ui_form_cmd.rs  agent_cmd.rs  api_key_provider_cmd.rs  aster_agent_cmd.rs  content_cmd.rs  ecommerce_review_reply_cmd.rs  memory_cmd.rs  mod.rs  model_cmd.rs  model_registry_cmd.rs  network_cmd.rs  persona_cmd.rs  plugin_rpc_cmd.rs  poster_material_cmd.rs  route_cmd.rs  skill_error.rs  skill_exec_cmd.rs  unified_chat_cmd.rs  update_cmd.rs  workspace_cmd.rs
src-tauri/src/config/: hot_reload.rs  types.rs
src-tauri/src/content/: manager.rs  mod.rs  types.rs
src-tauri/src/converter/: README.md  mod.rs  openai_to_antigravity.rs  reasoning_handler.rs
src-tauri/src/credential/: balancer.rs  mod.rs
src-tauri/src/database/: migration.rs  schema.rs  system_providers.rs
src-tauri/src/database/dao/: a2ui_form_dao.rs  agent.rs  api_key_provider.rs  brand_persona_dao.rs  chat.rs  mod.rs  poster_material_dao.rs  provider_pool.rs
src-tauri/src/dev_bridge/: dispatcher.rs
src-tauri/src/memory/: manager.rs  mod.rs  types.rs
src-tauri/src/models/: anthropic.rs  model_registry.rs  project_model.rs  provider_pool_model.rs
src-tauri/src/processor/: mod.rs  tests.rs
src-tauri/src/processor/steps/: routing.rs
src-tauri/src/providers/: antigravity.rs  claude_custom.rs  mod.rs  openai_custom.rs
src-tauri/src/router/: mod.rs
src-tauri/src/screenshot/: config.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/handlers/: api.rs  provider_calls.rs  websocket.rs
src-tauri/src/services/: README.md  api_key_provider_service.rs  aster_session_store.rs  mod.rs  model_registry_service.rs  model_service.rs  persona_service.rs  update_check_service.rs  update_window.rs
src-tauri/src/terminal/connections/: wsl_connection.rs
src-tauri/src/voice/: asr_service.rs
src-tauri/src/workspace/: manager.rs  types.rs
src/components/: AppSidebar.tsx  ConfirmDialog.tsx  Modal.tsx  Settings.tsx
src/components/api-server/: ApiServerPage.tsx
src/components/artifact/: ArtifactList.tsx  ArtifactPanel.test.ts  ArtifactPanel.tsx  ArtifactRenderer.test.ts  ArtifactRenderer.tsx  ArtifactToolbar.test.ts  ArtifactToolbar.tsx  CanvasAdapter.tsx  ErrorFallbackRenderer.tsx  README.md  canvasAdapterUtils.ts  index.ts
src/components/batch/: BatchPage.tsx  BatchTaskDetail.tsx  CreateBatchDialog.tsx  TemplateManager.tsx  index.ts
src/components/config/: ImportExport.tsx
src/components/content-creator/: types.ts
src/components/flow-monitor/: NotificationSettings.tsx
src/components/image-gen/: ImageGenPage.tsx  types.ts  useImageGen.ts
src/components/projects/: index.ts  (+9 more)
src/hooks/: README.md  index.ts  useBrandPersona.ts  useMultiPlatformExport.ts  usePosterMaterial.ts  usePosterWorkflow.ts  useTauri.ts  useUnifiedChat.ts  useWorkspace.ts
src/lib/: README.md
src/pages/: README.md  update-notification.css  update-notification.tsx
src/stores/: agentStore.ts  useWorkbenchStore.ts
src/types/: brand-persona.ts  chat.ts  index.ts  material.ts  page.ts  poster-material.ts  settings.ts
(+192 files in other folders)
