[package]
name = "proxycast-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
proxycast-core.workspace = true
proxycast-mcp.workspace = true
proxycast-services.workspace = true
proxycast-providers.workspace = true
aster.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
dirs.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
