[package]
name = "proxycast-scheduler"
version = "0.61.0"
edition = "2021"

[dependencies]
# 序列化
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# 异步运行时
tokio = { workspace = true }
async-trait = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }

# 数据库
rusqlite = { workspace = true }

# 时间和 UUID
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

# 项目内依赖
proxycast-core = { workspace = true }
proxycast-agent = { workspace = true }
